Feat: Reorganização da estrutura com suporte a componentes reutilizáveis
- Criado componente navbar.html
- Adicionado carregamento dinâmico da navbar com JavaScript
- Aplicado destaque do link ativo no menu
- Organizada estrutura de pastas para scripts, estilos e componentes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutricionista</title>
-    <link rel="icon" href="images/" />
+    <link rel="icon" href="assets/images/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles/style.css" />
-    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="assets/styles/global.css" />
+    <script src="assets/scripts/main.js" defer></script>
   </head>
 
   <body>
@@ -22,12 +22,12 @@
       <div class="container-banner">
         <div class="top-banner">
           <img
-            src="images/header/abstract-top-left.svg"
+            src="assets/images/header/top-banner/abstract-top-left.svg"
             alt="Design virado para esquerda"
           />
           <div class="container-text">
             <img
-              src="images/header/cricket.ball.fill.svg"
+              src="assets/images/header/top-banner/cricket.ball.fill.svg"
               id="criquete"
               alt="Críquete"
             />
@@ -36,13 +36,13 @@
               personalizada
             </p>
             <img
-              src="images/header/arrow-right.svg"
+              src="assets/images/header/top-banner/arrow-right.svg"
               alt="Setra para a direita"
             />
           </div>
 
           <img
-            src="images/header/abstract-top-right.svg"
+            src="assets/images/header/top-banner/abstract-top-right.svg"
             alt="Design virado para
           direita"
           />
@@ -51,7 +51,7 @@
 
       <nav class="container-nav">
         <div class="nav-logo">
-          <img src="images/logo.svg" alt="Logo" />
+          <img src="assets/images/common/logo.svg" alt="Logo" />
         </div>
         <div class="nav-menu">
           <ul class="nav-list">
@@ -61,7 +61,7 @@
             <li><a href="pages/processo.html">Processo</a></li>
             <li><a href="pages/preco.html">Preço</a></li>
             <li><a href="pages/blog.html">Blog</a></li>
-            <li><a href="#contato">Contate-Nos</a></li>
+            <li><a href="pages/contato.html">Contate-Nos</a></li>
           </ul>
         </div>
       </nav>
@@ -101,7 +101,7 @@
         <div class="features">
           <div class="feature-1">
             <div class="feature-icon">
-              <img src="images/icon-1.svg" alt="Feature 1" />
+              <img src="assets/images/icon-1.svg" alt="Feature 1" />
               <h2>Nutrição Personalizada</h2>
             </div>
             <p>
@@ -112,7 +112,7 @@
           </div>
           <div class="feature-2">
             <div class="feature-icon">
-              <img src="images/icon-2.svg" alt="Feature 1" />
+              <img src="assets/images/icon-2.svg" alt="Feature 1" />
               <h2>Orientação de Nutricionistas Certificados</h2>
             </div>
             <p>
@@ -125,7 +125,7 @@
           </div>
           <div class="feature-3">
             <div class="feature-icon">
-              <img src="images/icon-3.svg" alt="Feature 1" />
+              <img src="assets/images/icon-3.svg" alt="Feature 1" />
               <h2>Rastreamento e análise de alimentos</h2>
             </div>
             <p>
@@ -138,7 +138,7 @@
           </div>
           <div class="feature-4">
             <div class="feature-icon">
-              <img src="images/icon-4.svg" alt="Feature 1" />
+              <img src="assets/images/icon-4.svg" alt="Feature 1" />
               <h2>Planejamento de refeições e receitas</h2>
             </div>
             <p>
@@ -150,7 +150,7 @@
           </div>
           <div class="feature-5">
             <div class="feature-icon">
-              <img src="images/icon-5.svg" alt="Feature 1" />
+              <img src="assets/images/icon-5.svg" alt="Feature 1" />
               <h2>Coaching de Estilo de Vida e Comportamento</h2>
             </div>
             <p>
@@ -163,7 +163,7 @@
           </div>
           <div class="feature-6">
             <div class="feature-icon">
-              <img src="images/icon-6.svg" alt="Feature 1" />
+              <img src="assets/images/icon-6.svg" alt="Feature 1" />
               <h2>Educação Nutricional e Workshops</h2>
             </div>
             <p>
@@ -186,7 +186,7 @@
           </p>
           <div class="blog-list">
             <div class="blog-1">
-              <img src="images/blog-1.svg" alt="Foto de mulher bebendo agua" />
+              <img src="assets/images/blog-1.svg" alt="Foto de mulher bebendo agua" />
               <div class="card">
                 <p>Perda de peso</p>
                 <h2>Os benefícios da hidratação para perda de peso</h2>
@@ -196,15 +196,15 @@
                 </p>
               </div>
               <div class="blog-social">
-                <img src="images/profile-1.svg" alt="Mulher de rosa" />
+                <img src="assets/images/profile-1.svg" alt="Mulher de rosa" />
                 <h3>Emily Johnson</h3>
                 <p>23 May 2023 - 5 min read</p>
-                <img src="images/hearth.svg" alt="Icone de curtir" />
-                <img src="images/save.svg" alt="Icone de Salvar" />
+                <img src="assets/images/hearth.svg" alt="Icone de curtir" />
+                <img src="assets/images/save.svg" alt="Icone de Salvar" />
               </div>
             </div>
             <div class="blog-2">
-              <img src="images/blog-2.svg" alt="Foto de mulher bebendo agua" />
+              <img src="assets/images/blog-2.svg" alt="Foto de mulher bebendo agua" />
               <div class="card">
                 <p>Alimentação consciente</p>
                 <h2>Cultivando uma relação saudável com a comida</h2>
@@ -215,15 +215,15 @@
                 </p>
               </div>
               <div class="blog-social">
-                <img src="images/profile-2.svg" alt="Mulher de rosa" />
+                <img src="assets/images/profile-2.svg" alt="Mulher de rosa" />
                 <h3>Sarah Thompson</h3>
                 <p>23 May 2023 - 5 min read</p>
-                <img src="images/hearth.svg" alt="Icone de curtir" />
-                <img src="images/save.svg" alt="Icone de Salvar" />
+                <img src="assets/images/hearth.svg" alt="Icone de curtir" />
+                <img src="assets/images/save.svg" alt="Icone de Salvar" />
               </div>
             </div>
             <div class="blog-3">
-              <img src="images/blog-3.svg" alt="Foto de mulher bebendo agua" />
+              <img src="assets/images/blog-3.svg" alt="Foto de mulher bebendo agua" />
               <div class="card">
                 <p>Compreendendo os macronutrientes</p>
                 <h2>Carboidratos, proteínas e gorduras</h2>
@@ -233,15 +233,15 @@
                 </p>
               </div>
               <div class="blog-social">
-                <img src="images/profile-3.svg" alt="Mulher de rosa" />
+                <img src="assets/images/profile-3.svg" alt="Mulher de rosa" />
                 <h3>Mark Wilson</h3>
                 <p>23 May 2023 - 5 min read</p>
-                <img src="images/hearth.svg" alt="Icone de curtir" />
-                <img src="images/save.svg" alt="Icone de Salvar" />
+                <img src="assets/images/hearth.svg" alt="Icone de curtir" />
+                <img src="assets/images/save.svg" alt="Icone de Salvar" />
               </div>
             </div>
             <div class="blog-4">
-              <img src="images/blog-4.svg" alt="Foto de mulher bebendo agua" />
+              <img src="assets/images/blog-4.svg" alt="Foto de mulher bebendo agua" />
               <div class="card">
                 <p>Lanches saudáveis ​​para viagem</p>
                 <h2>Opções rápidas e nutritivas</h2>
@@ -251,11 +251,11 @@
                 </p>
               </div>
               <div class="blog-social">
-                <img src="images/profile-4.svg" alt="Mulher de rosa" />
+                <img src="assets/images/profile-4.svg" alt="Mulher de rosa" />
                 <h3>Emily Johnson</h3>
                 <p>23 May 2023 - 5 min read</p>
-                <img src="images/hearth.svg" alt="Icone de curtir" />
-                <img src="images/save.svg" alt="Icone de Salvar" />
+                <img src="assets/images/hearth.svg" alt="Icone de curtir" />
+                <img src="assets/images/save.svg" alt="Icone de Salvar" />
               </div>
             </div>
           </div>
@@ -272,7 +272,7 @@
 
         <div class="depoiments-list">
           <div class="depoiment-1">
-            <img src="images/Text.svg" alt="Virgula em imagem" />
+            <img src="assets/images/Text.svg" alt="Virgula em imagem" />
             <p>
               Não tenho palavras para agradecer à Nutritionist pelo seu coaching
               nutricional personalizado. Ele transformou completamente minha
@@ -280,41 +280,41 @@
               extras. Recomendo muito!
             </p>
             <div class="social-depoiment">
-              <img src="images/depoiment-1.svg" alt="Mulher de rosa" />
+              <img src="assets/images/depoiment-1.svg" alt="Mulher de rosa" />
               <p>Jennifer Anderson</p>
             </div>
           </div>
           <div class="depoiment-2">
-            <img src="images/Text.svg" alt="Virgula em imagem" />
+            <img src="assets/images/Text.svg" alt="Virgula em imagem" />
             <p>
               A nutricionista mudou tudo para mim. A orientação especializada e
               o apoio que recebi da equipe dela tornaram minha jornada de perda
               de peso muito mais fácil. Obrigada!
             </p>
             <div class="social-depoiment">
-              <img src="images/depoiment-2.svg" alt="Mulher de rosa" />
+              <img src="assets/images/depoiment-2.svg" alt="Mulher de rosa" />
               <p>Robert Johnson</p>
             </div>
           </div>
           <div class="depoiment-3">
-            <img src="images/Text.svg" alt="Virgula em imagem" />
+            <img src="assets/images/Text.svg" alt="Virgula em imagem" />
             <p>
               Lutei contra o meu peso por anos até encontrar uma nutricionista.
               Sua abordagem personalizada e seu plano nutricional personalizado
               fizeram toda a diferença. Nunca me senti melhor!
             </p>
             <div class="social-depoiment">
-              <img src="images/depoiment-3.svg" alt="Mulher de rosa" />
+              <img src="assets/images/depoiment-3.svg" alt="Mulher de rosa" />
               <p>Emily Davis</p>
             </div>
           </div>
           <div class="container-slidebar">
-            <img src="images/arrow-left.svg" alt="Setra para a esquerda" />
+            <img src="assets/images/arrow-left.svg" alt="Setra para a esquerda" />
             <div id="circle-active"></div>
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
-            <img src="images/arrow-right.svg" alt="Setra para a direita" />
+            <img src="assets/images/arrow-right.svg" alt="Setra para a direita" />
           </div>
         </div>
       </section>
@@ -376,7 +376,7 @@
     </main>
     <footer class="container-footer">
       <div class="footer-menu">
-        <img src="images/logo.svg" alt="Logo" />
+        <img src="assets/images/logo.svg" alt="Logo" />
         <ul class="footer-list">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="pages/sobre.html">Sobre</a></li>
@@ -387,19 +387,19 @@
           <button>Contate-nos</button>
         </ul>
         <h2>Voltar para o Início</h2>
-        <img src="images/arrow-up.svg" alt="seta pra cima" />
+        <img src="assets/images/arrow-up.svg" alt="seta pra cima" />
       </div>
       <div class="footer-contato">
         <div class="email">
-          <img src="images/email.svg" alt="icone email" />
+          <img src="assets/images/email.svg" alt="icone email" />
           <p>hello@squareup.com</p>
         </div>
         <div class="telefone">
-          <img src="images/telefone.svg" alt="icone telefone" />
+          <img src="assets/images/telefone.svg" alt="icone telefone" />
           <p>+91 91813 23 2309</p>
         </div>
         <div class="endereço">
-          <img src="images/location.svg" alt="icone gps" />
+          <img src="assets/images/location.svg" alt="icone gps" />
           <p>Em algum lugar do mundo</p>
         </div>
         <p>© 2025 Nutricionista. Todos os direitos reservados.</p>
