--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -3,68 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nutricionista</title>
-    <link rel="icon" href="images/" />
+    <title>Sobre</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/assets/styles/components/navbar.css" />
 
-    <link rel="stylesheet" href="../styles/style.css" />
-    <script src="../scripts/script.js" defer></script>
+    <script src="/assets/scripts/components/navbar.js" defer></script>
   </head>
-
   <body>
-    <header class="container-header">
-      <div class="container-banner">
-        <div class="top-banner">
-          <img
-            src="../images/header/abstract-top-left.svg"
-            alt="Design virado para esquerda"
-          />
-          <div class="container-text">
-            <img
-              src="../images/header/cricket.ball.fill.svg"
-              id="criquete"
-              alt="Críquete"
-            />
-            <p>
-              Participe gratuitamente da nossa demonstração de nutrição
-              personalizada
-            </p>
-            <img
-              src="../images/header/arrow-right.svg"
-              alt="Setra para a direita"
-            />
-          </div>
-
-          <img
-            src="../images/header/abstract-top-right.svg"
-            alt="Design virado para
-          direita"
-          />
-        </div>
-      </div>
-
-      <nav class="container-nav">
-        <div class="nav-logo">
-          <img src="../images/logo.svg" alt="Logo" />
-        </div>
-        <div class="nav-menu">
-          <ul class="nav-list">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="time.html">Time</a></li>
-            <li><a href="processo.html">Processo</a></li>
-            <li><a href="preco.html">Preço</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contato.html">Contate-Nos</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div id="navbar-container"></div>
   </body>
 </html>
