Feat: Finaliza seção Hero com imagem e chamada principal

--- a/index.html
+++ b/index.html
@@ -66,31 +66,53 @@
         </div>
       </nav>
     </header>
-    <!-- <section class="hero">
+    <section class="hero">
       <div class="container-hero">
-        <p>Transforme a sua saúde ❤️ com</p>
-        <div class="line"></div>
-        <h1>Coaching Nutricional Personalizado</h1>
-        <p>
-          Bem-vindo à Nutritionist, sua parceira para alcançar a saúde ideal
-          por meio de coaching nutricional personalizado. Nossos
-          nutricionistas certificados estão aqui para orientá-lo em sua
-          jornada de perda de peso, oferecendo planos personalizados e suporte
-          contínuo. Comece sua transformação hoje mesmo e experimente o poder
-          do coaching nutricional personalizado.
-        </p>
-        <button>Comece hoje mesmo</button>
-        <button>Agende uma demonstração</button>
-      </div>
-      <div class="container-clients">
-        <p>Mais de 430 clientes satisfeitos</p>
-        <div class="container-circles">
-          <div class="circle-1"></div>
-          <div class="circle-2"></div>
-          <div class="circle-2"></div>
+        <img
+          src="assets/images/header/hero-banner/coach.svg"
+          alt="Mulher cruzando o braço"
+        />
+        <div class="content-hero">
+          <p id="text-hero">Transforme a sua saúde ❤️ com</p>
+          <h1>Coaching Nutricional Personalizado</h1>
+          <p>
+            Bem-vindo à Nutritionist, sua parceira para alcançar a saúde ideal
+            por meio de coaching nutricional personalizado. Nossos
+            nutricionistas certificados estão aqui para orientá-lo em sua
+            jornada de perda de peso, oferecendo planos personalizados e suporte
+            contínuo. Comece sua transformação hoje mesmo e experimente o poder
+            do coaching nutricional personalizado.
+          </p>
+          <div class="btn-hero">
+            <a href="" id="btn-1">Comece hoje mesmo</a>
+            <a href="" id="btn-2">Agende uma demonstração</a>
+          </div>
+          <div class="container-clients">
+            <p><span>430+</span> Clientes Satisfeitos</p>
+            <div class="container-circles">
+              <div id="circle-1">
+                <img
+                  src="assets/images/header/hero-banner/people-1.svg"
+                  alt=""
+                />
+              </div>
+              <div id="circle-2">
+                <img
+                  src="assets/images/header/hero-banner/people-2.svg"
+                  alt=""
+                />
+              </div>
+              <div id="circle-2">
+                <img
+                  src="assets/images/header/hero-banner/people-3.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <main class="container-main">
       <section class="container-features">
